<resources>
    <string name="app_name">Birthday</string>
    <string name="add_dialog_title">Add with:</string>
    <string name="by_hand">By hand</string>
    <string name="facebook">Facebook</string>
    <string name="contacts">Contacts</string>
    <string name="vk">Vk</string>
    <string name="social_network">Social networks</string>
    <string name="choose_network">Choose social network</string>
    <string name="choose_day">Day</string>
    <string name="choose_year">Year</string>
    <string name="birthday">Birthday:</string>
    <string name="set_birthday">Set birthday:</string>
    <string name="when_birthday">Birthday in:</string>
    <string name="wish_birthday">Wish happy birthday:</string>
    <string name="notification_sound">Notification sound</string>
    <string name="notification_light">Notification light</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="select_friends">Select all friends</string>
    <string name="ok">OK</string>
    <string name="invalid_birthday">You must enter birthday</string>
    <string name="nickname">Enter a name</string>
    <string name="delete">Delete</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="facebook_app_id">481531966308237</string>
    <integer name="com_vk_sdk_AppId">7772091</integer>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>