<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/account"
            android:title="@string/account"
            android:icon="@drawable/ic_baseline_account_circle">
        </item>
    </group>
    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/settings_item"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings">
        </item>
    </group>
    <group
        android:id="@+id/group3">
        <item
            android:id="@+id/notification"
            android:title="@string/notification"
            android:icon="@drawable/ic_baseline_notifications">
        </item>
    </group>
</menu>